fix: resolve mobile layout overflows on warnings and buttons; remove analytics for reviewers

--- a/src/layouts/MainLayout/MainLayout.module.scss
+++ b/src/layouts/MainLayout/MainLayout.module.scss
@@ -6,6 +6,8 @@
   display: flex;
   flex-direction: column;
   position: relative;
+  width: 100%;
+  overflow-x: hidden;
   
   @include tablet-and-up {
     flex-direction: row;
@@ -34,6 +36,7 @@
   flex-direction: column;
   min-height: 100vh;
   width: 100%;
+  overflow-x: hidden;
   
   @include tablet-and-up {
     margin-left: $sidebar-width;
